correção de versionamento

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button id="player4_marcou" class="btn btn-success p-5 w-100 ml-1 d-none">Jogador 4 marcou</button>
         </div>
         <button id ="adicionar_jogador" class="btn btn-success mt-2 w-100">Adicionar Jogador</button>
-        <button id ="remover_jogador" class="btn btn-danger mt-2 w-100">Remover Jogador</button>
+        <button id ="remover_jogador" class="btn btn-danger mt-2 w-100 d-none">Remover Jogador</button>
         <button id="reset" class="btn btn-danger mt-2 w-100">Reiniciar Placar</button>
 
     </div>
